--- a/src/app.css
+++ b/src/app.css
@@ -37,12 +37,16 @@
 }
 
 @layer components {
-    .btn-wrapper {
-        @apply min-w-60 p-3 text-lg font-semibold text-white whitespace-nowrap rounded-xl focus:ring-2 focus:ring-black dark:focus:ring-white transition duration-300
+    .btn-primary {
+        @apply relative min-w-60 p-3 text-lg font-semibold text-white whitespace-nowrap rounded-xl disabled:opacity-50 disabled:cursor-not-allowed bg-[#2D8EFF] dark:bg-[#479DFF] hover:after:content-[''] hover:after:rounded-xl hover:after:absolute hover:after:w-full hover:after:h-full hover:after:top-0 hover:after:left-0 hover:after:bg-black/10 dark:hover:after:bg-white/10 active:after:content-[''] active:after:rounded-xl active:after:absolute active:after:w-full active:after:h-full active:after:top-0 active:after:left-0 active:after:bg-black/20 dark:active:after:bg-white/20 focus:after:content-[''] focus:after:rounded-xl focus:after:absolute focus:after:w-full focus:after:h-full focus:after:top-0 focus:after:left-0 focus:after:bg-black/10 dark:focus:after:bg-white/10 focus:ring-2 focus:ring-black dark:focus:ring-white transition duration-300
     }
 
-    .btn-primary {
-        @apply min-w-60 p-3 text-lg font-semibold rounded-xl text-white bg-[#2D8EFF] hover:bg-[#2880E4] active:bg-[#2472CC] focus:bg-[#2880E4] focus:ring-black focus:ring-2 dark:bg-[#479DFF] dark:hover:bg-[#59A7FF] dark:active:bg-[#6BB1FF] dark:focus:bg-[#59A7FF] dark:focus:ring-white disabled:opacity-50 disabled:cursor-not-allowed transition duration-300
+    .btn-white {
+        @apply relative min-w-60 p-3 text-lg font-semibold whitespace-nowrap rounded-xl disabled:opacity-50 disabled:cursor-not-allowed bg-white text-black/55 hover:after:content-[''] hover:after:rounded-xl hover:after:absolute hover:after:w-full hover:after:h-full hover:after:top-0 hover:after:left-0 hover:after:bg-black/10 active:after:content-[''] active:after:rounded-xl active:after:absolute active:after:w-full active:after:h-full active:after:top-0 active:after:left-0 active:after:bg-black/20 focus:after:content-[''] focus:after:rounded-xl focus:after:absolute focus:after:w-full focus:after:h-full focus:after:top-0 focus:after:left-0 focus:after:bg-black/10 focus:ring-2 focus:ring-black dark:focus:ring-white transition duration-300
+    }
+
+    .btn-black {
+        @apply relative min-w-60 p-3 text-lg font-semibold whitespace-nowrap rounded-xl disabled:opacity-50 disabled:cursor-not-allowed bg-black dark:bg-white text-white dark:text-[var(--text-black)] hover:after:content-[''] hover:after:rounded-xl hover:after:absolute hover:after:w-full hover:after:h-full hover:after:top-0 hover:after:left-0 hover:after:bg-white/10 dark:hover:after:bg-black/10 active:after:content-[''] active:after:rounded-xl active:after:absolute active:after:w-full active:after:h-full active:after:top-0 active:after:left-0 active:after:bg-white/20 dark:active:after:bg-black/20 focus:after:content-[''] focus:after:rounded-xl focus:after:absolute focus:after:w-full focus:after:h-full focus:after:top-0 focus:after:left-0 focus:after:bg-white/10 dark:focus:after:bg-black/10 focus:ring-2 focus:ring-black dark:focus:ring-white transition duration-300
     }
 
     hr:not(.divider) {
